fixed responsiveness issue on mobile

--- a/web_app/static/style.css
+++ b/web_app/static/style.css
@@ -193,11 +193,12 @@ footer {
 			display: flex;
 			flex-direction: column;
 			align-items: center;
-			padding: 20;
+			padding: 20px;
 			margin: 10px;
 			border: 2px solid white;
 			border-radius: 25px;
 			font-family: Trebuchet MS;
 			color: white;
+			overflow: auto;
 	}
 }
